best-practices-vpol/require-labels/.kyverno-test/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: exception-labels
  namespace: test
spec:
  containers:
  - name: nginx
    image: nginx:1.12
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
  namespace: test
spec:
  containers:
  - name: nginx
    image: nginx:1.12
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
  namespace: test
  labels:
    my.io/foo: bar
spec:
  containers:
  - name: nginx
    image: nginx:1.12
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
  namespace: test
  labels:
    app.kubernetes.io/name: nginx
spec:
  containers:
  - name: nginx
    image: nginx:1.12
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod03
  labels:
    app.kubernetes.io/name: ''
spec:
  containers:
  - name: nginx
    image: nginx:1.12
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
  namespace: test
  labels:
    foo: bar
    app.kubernetes.io/name: nginx
spec:
  containers:
  - name: nginx
    image: nginx:1.12
