best-practices-vpol/require-labels/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: require-labels
policies:
- ../require-labels.yaml
resources:
- resource.yaml
exceptions:
- exceptions.yaml
results:
- kind: Pod
  policy: require-labels
  resources:
  - badpod01
  result: fail
  isValidatingPolicy: true
- kind: Pod
  policy: require-labels
  resources:
  - badpod02
  - badpod03
  result: fail
  isValidatingPolicy: true
- kind: Pod
  policy: require-labels
  resources:
  - goodpod01
  - goodpod02
  result: pass
  isValidatingPolicy: true
- kind: Pod
  policy: require-labels
  resources:
  - exception-labels
  result: pass
  isValidatingPolicy: true
